<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022  Etienne Schmidt (eschmidt@schmidt-ti.eu)
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Action-bar icons (always visible) -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_overview"
        android:icon="@drawable/drag"
        android:title="@string/action_overview_title"
        app:showAsAction="ifRoom" />

    <!-- Bulk check / uncheck / delete actions -->
    <group android:id="@+id/group_bulk_actions">
        <item
            android:id="@+id/check_all"
            android:title="@string/menu_check_all" />
        <item
            android:id="@+id/uncheck_all"
            android:title="@string/menu_uncheck_all" />
        <item
            android:id="@+id/delete_checked"
            android:title="@string/menu_delete_checked" />
        <item
            android:id="@+id/toggle_all"
            android:title="@string/menu_toggle_all" />

        <item
            android:id="@+id/list_clear"
            android:title="@string/menu_list_clear" />
    </group>

    <!-- Import -->
    <group android:id="@+id/group_import">
        <item
            android:id="@+id/import_text"
            android:title="@string/menu_import_text" />
    </group>

    <!-- Export sub-menu -->
    <group android:id="@+id/group_export">
        <item
            android:id="@+id/export_group"
            android:title="@string/menu_export_group">
            <menu>
                <item
                    android:id="@+id/export_md"
                    android:title="@string/menu_export_share_md" />
                <item
                    android:id="@+id/export_link"
                    android:title="@string/menu_export_share" />
                <item
                    android:id="@+id/export_list_json"
                    android:title="@string/menu_export_list_json" />
            </menu>
        </item>
    </group>

    <!-- List management -->
    <group android:id="@+id/group_manage">
       
        <item
            android:id="@+id/manual_sync"
            android:title="@string/menu_manual_sync" />
        <item
            android:id="@+id/list_settings"
            android:title="@string/menu_list_settings" />
        <item
            android:id="@+id/settings"
            android:title="@string/menu_settings" />
    </group>

</menu>
