...
                        android:layout_marginStart="15dp"
                        android:text="Beschreibung: asdasdasfdiasudgfiaughiudafhbadfiguhaiuegtfdfvbiua7esrtfg9irgfubidufvbpiausgfisudhfiubaydifugapw9eifghjdbfvsaidfpiuadfiubgdhfbvIEUG IUEF IUAHF IUEHFIU DSIU SDAHFIUHDSIF UHASDIUF HSDIUF SADIUHF IUSDAHF ISUADFH SDF" />
                </LinearLayout>


                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
...
